--- a/style.css
+++ b/style.css
@@ -26,7 +26,7 @@ body{
 }
 
 input{
-  width: 100%;
+  width: 320px;
   border: none;
   padding: 24px;
   margin: 10px;
@@ -34,4 +34,28 @@ input{
   box-shadow: 0px 3px 15px rgbs(84, 84, 0.1);
   font-size: 40px;
   text-align: right;
+  cursor: pointer;
+}
+input::placeholder{
+  color: #ffffff;
+}
+button{
+  border: none;
+  width: 60px;
+  height: 60px;
+  margin: 10px;
+  border-radius: 50px;
+  background: transparent;
+  color: #ffffff;
+  font-size: 20px;
+  box-shadow: -8px 2px rgb(255, 255, 255, 0.1);
+  cursor: pointer;
+}
+
+.equalBtn{
+  background-color: #fb7c41;
+}
+
+.operator{
+  color: #6dee0a;
 }
